Fixed a zIndex bug where actions were placed behind the chart

--- a/Source/analytics/resources/less/AnalyticsStatsWidget.less
+++ b/Source/analytics/resources/less/AnalyticsStatsWidget.less
@@ -22,7 +22,7 @@
     div.title { font-weight: bold; font-size: 15px; margin-bottom: 7px; }
     div.period { margin-bottom: 24px; }
 
-    .actions { display: none; float: none !important; position: absolute; z-index: 1; top: 0px; right: -7px; margin: 0; }
+    .actions { display: none; float: none !important; position: absolute; z-index: 2; top: 0px; right: -7px; margin: 0; }
     .actions ul li { display: inline-block; margin-left: 7px;}
     .actions a.dk-settings-btn { color: rgb(41, 50, 61); opacity: .5; padding: 6px 8px; }
     .actions a.dk-settings-btn:hover { opacity: .8;  }
@@ -46,6 +46,8 @@
     .graph.geo { min-height: 300px; }
 
     .graph.table {
+
+        z-index: 1;
 
         margin: 0 0 20px 0; position: relative; min-height: 30px; border-top:1px dotted #e3e5e8; min-height: 60px;
 
